test/invalid-syntax/56307_unterminatedLiteralString/unterminatedLiteralString.agu
-- Author: 5307, Denis Ungureanu
let badString : String = "This string never ends